--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.31/jspdf.plugin.autotable.min.js"></script>
     
+    <!-- Verificación de carga de scripts -->
+    <script>
+        window.addEventListener('load', function() {
+            console.log('🔍 Verificando scripts cargados:');
+            console.log('- Google API:', typeof google !== 'undefined' ? 'Cargado' : 'No cargado');
+            console.log('- jsPDF:', typeof window.jspdf !== 'undefined' ? 'Cargado' : 'No cargado');
+        });
+    </script>
+    
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
