--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             console.log('🔍 Verificando scripts cargados:');
             console.log('- Google API:', typeof google !== 'undefined' ? 'Cargado' : 'No cargado');
             console.log('- jsPDF:', typeof window.jspdf !== 'undefined' ? 'Cargado' : 'No cargado');
+            console.log('- Script principal:', typeof initializeApp !== 'undefined' ? 'Cargado' : 'NO CARGADO - REVISAR js/script.js');
         });
     </script>
     
@@ -33,7 +34,7 @@
                 <img src="https://lh3.googleusercontent.com/d/12tYxfzWgy3BVYjadXOEKlX5-uSsxIrBt" alt="CESPSIC" class="logo">
                 <img src="https://lh3.googleusercontent.com/d/1tR9QzPGbydb_qjDkZOKsoNU6_xIBGQP2" alt="Facultad de Psicología" class="logo">
             </div>
-            <h1>Generador de Reportes de Asistencia - Centro de Servicios Psicológicos (CESPSIC) v.1.0.4</h1>
+            <h1>Generador de Reportes de Asistencia - Centro de Servicios Psicológicos (CESPSIC) v.1.0.5</h1>
         </div>
 
         <!-- Sección de Autenticación -->
