--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img src="https://lh3.googleusercontent.com/d/12tYxfzWgy3BVYjadXOEKlX5-uSsxIrBt" alt="CESPSIC" class="logo">
                 <img src="https://lh3.googleusercontent.com/d/1tR9QzPGbydb_qjDkZOKsoNU6_xIBGQP2" alt="Facultad de Psicología" class="logo">
             </div>
-            <h1>Generador de Reportes de Asistencia - Centro de Servicios Psicológicos (CESPSIC) v.1.0.6</h1>
+            <h1>Generador de Reportes de Asistencia - Centro de Servicios Psicológicos (CESPSIC) v.1.0.7</h1>
         </div>
 
         <!-- Sección de Autenticación -->
@@ -178,6 +178,6 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="js/script.js"></script>
+    <script src="js/reports.js"></script>
 </body>
 </html>
