--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             console.log('🔍 Verificando scripts cargados:');
             console.log('- Google API:', typeof google !== 'undefined' ? 'Cargado' : 'No cargado');
             console.log('- jsPDF:', typeof window.jspdf !== 'undefined' ? 'Cargado' : 'No cargado');
-            console.log('- Script principal:', typeof initializeApp !== 'undefined' ? 'Cargado' : 'NO CARGADO - REVISAR js/script.js');
+            console.log('- Script principal:', typeof initializeApp !== 'undefined' ? 'Cargado' : 'NO CARGADO - REVISAR js/reports.js');
         });
     </script>
     
@@ -34,7 +34,7 @@
                 <img src="https://lh3.googleusercontent.com/d/12tYxfzWgy3BVYjadXOEKlX5-uSsxIrBt" alt="CESPSIC" class="logo">
                 <img src="https://lh3.googleusercontent.com/d/1tR9QzPGbydb_qjDkZOKsoNU6_xIBGQP2" alt="Facultad de Psicología" class="logo">
             </div>
-            <h1>Generador de Reportes de Asistencia - Centro de Servicios Psicológicos (CESPSIC) v.1.0.25</h1>
+            <h1>Generador de Reportes de Asistencia - Centro de Servicios Psicológicos (CESPSIC) v.1.0.26</h1>
         </div>
 
         <!-- Sección de Autenticación -->
@@ -62,8 +62,8 @@
             </div>
             
             <div class="auth-info" style="margin-top: 15px; padding: 10px; background: #e3f2fd; border-radius: 8px; font-size: 14px; color: #1565c0;">
-                ℹ️ <strong>Nota:</strong> Solo usuarios autorizados pueden acceder a esta funcionalidad.
-                <br>ℹ️ <strong>Acceso:</strong> Restringido a administradores de CESPSIC.
+                🔐 <strong>Nota:</strong> Solo usuarios autorizados pueden acceder a esta funcionalidad.
+                <br>🏢 <strong>Acceso:</strong> Restringido a administradores de CESPSIC.
             </div>
         </div>
 
@@ -158,7 +158,7 @@
     <div class="modal-overlay" id="modal-overlay">
         <div class="modal">
             <div class="modal-header">
-                <h3>📄 Reporte Generado Exitosamente</h3>
+                <h3>✅ Reporte Generado Exitosamente</h3>
                 <button class="modal-close" onclick="closeModal()">&times;</button>
             </div>
             <div class="modal-body">
