--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <div class="checkbox-item checkbox-evidencias">
                                 <input type="checkbox" id="incluir_evidencias_solo" name="incluir_campos[]" value="evidencias_solo" onchange="handleEvidenciasChange(this)">
                                 <label for="incluir_evidencias_solo">
-                                    <strong>📎 Solo Evidencias de Salida</strong> (Links clickeables de columna AI)
+                                    <strong>📎 Solo Evidencias de Salida</strong> (Links clickeables)
                                     <br><small style="color: #666;">Filtra únicamente registros de SALIDA con links a documentos. Los enlaces serán clickeables en el PDF.</small>
                                 </label>
                             </div>
@@ -120,7 +120,7 @@
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="incluir_evidencias" name="incluir_campos[]" value="evidencias" checked>
-                                <label for="incluir_evidencias">Total de evidencias (Columna AH)</label>
+                                <label for="incluir_evidencias">Total de evidencias</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="incluir_comentarios" name="incluir_campos[]" value="comentarios">
