--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img src="https://lh3.googleusercontent.com/d/12tYxfzWgy3BVYjadXOEKlX5-uSsxIrBt" alt="CESPSIC" class="logo">
                 <img src="https://lh3.googleusercontent.com/d/1tR9QzPGbydb_qjDkZOKsoNU6_xIBGQP2" alt="Facultad de Psicología" class="logo">
             </div>
-            <h1>Generador de Reportes de Asistencia - Centro de Servicios Psicológicos (CESPSIC) v.1.0.29</h1>
+            <h1>Generador de Reportes de Asistencia - Centro de Servicios Psicológicos (CESPSIC) v.1.0.31</h1>
         </div>
 
         <!-- Sección de Autenticación -->
@@ -103,7 +103,7 @@
                             <div class="checkbox-item checkbox-evidencias">
                                 <input type="checkbox" id="incluir_evidencias_solo" name="incluir_campos[]" value="evidencias_solo" onchange="handleEvidenciasChange(this)">
                                 <label for="incluir_evidencias_solo">
-                                    <strong>📎 Solo Evidencias de Salida</strong> (Links clickeables)
+                                    <strong>📎 Solo Evidencias de Salida</strong> (Links clickeables de columna AI)
                                     <br><small style="color: #666;">Filtra únicamente registros de SALIDA con links a documentos. Los enlaces serán clickeables en el PDF.</small>
                                 </label>
                             </div>
@@ -120,7 +120,7 @@
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="incluir_evidencias" name="incluir_campos[]" value="evidencias" checked>
-                                <label for="incluir_evidencias">Total de evidencias</label>
+                                <label for="incluir_evidencias">Total de evidencias (Columna AH)</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="incluir_comentarios" name="incluir_campos[]" value="comentarios">
