--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img src="https://lh3.googleusercontent.com/d/12tYxfzWgy3BVYjadXOEKlX5-uSsxIrBt" alt="CESPSIC" class="logo">
                 <img src="https://lh3.googleusercontent.com/d/1tR9QzPGbydb_qjDkZOKsoNU6_xIBGQP2" alt="Facultad de Psicología" class="logo">
             </div>
-            <h1>Generador de Reportes de Asistencia - Centro de Servicios Psicológicos (CESPSIC) v.1.0.34</h1>
+            <h1>Generador de Reportes de Asistencia - Centro de Servicios Psicológicos (CESPSIC) v.1.0.35</h1>
         </div>
 
         <!-- Sección de Autenticación -->
@@ -104,7 +104,7 @@
                                 <input type="checkbox" id="incluir_evidencias_solo" name="incluir_campos[]" value="evidencias_solo" onchange="handleEvidenciasChange(this)">
                                 <label for="incluir_evidencias_solo">
                                     <strong>Solo Evidencias de Salida</strong>
-                                    <br><small style="color: #666;">Filtra únicamente registros de SALIDA. Muestra nombres de evidencias (columna AI) y carpeta en Drive (columna AJ).</small>
+                                    <br><small style="color: #666;">Filtra únicamente registros de SALIDA.</small>
                                 </label>
                             </div>
                             
