--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label for="filtro_usuario">
-                                Filtrar por Usuario (opcional):
+                                Filtrar por Usuario:
                                 <span style="font-size: 0.85em; color: #666; font-weight: normal;">
                                     Se actualiza según el rango de fechas
                                 </span>
