--- a/index.html
+++ b/index.html
@@ -197,7 +197,14 @@
             </form>
         </div>
     </div>
-
+    <!-- Sección de visualización de asistencias (solo usuarios regulares) -->
+    <div class="attendance-view-section" id="attendance-view-section" style="display: none;">
+        <div class="form-section">
+            <h2>📋 Mis Asistencias del Período</h2>
+            <div class="attendance-summary" id="attendance-summary"></div>
+            <div class="attendance-list" id="attendance-list"></div>
+        </div>
+    </div>
     <!-- Modal para descarga -->
     <div class="modal-overlay" id="modal-overlay">
         <div class="modal">
