--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img src="https://lh3.googleusercontent.com/d/12tYxfzWgy3BVYjadXOEKlX5-uSsxIrBt" alt="CESPSIC" class="logo">
                 <img src="https://lh3.googleusercontent.com/d/1tR9QzPGbydb_qjDkZOKsoNU6_xIBGQP2" alt="Facultad de Psicología" class="logo">
             </div>
-            <h1>Generador de Reportes de Asistencia - Centro de Servicios Psicológicos (CESPSIC) v.4.17</h1>
+            <h1>Generador de Reportes de Asistencia - Centro de Servicios Psicológicos (CESPSIC) v.4.18</h1>
         </div>
 
         <!-- Sección de Autenticación -->
@@ -109,7 +109,7 @@
                             </label>
                             <select id="orden_datos" name="orden_datos">
                                 <option value="nombre">Nombre (Nombre, Tipo, Modal., Fecha, Hora, Reg.)</option>
-                                <option value="fecha">Fecha (Fecha, Hora, Tipo, Modal., Nombre, Reg.)</option>
+                                <option value="fecha">Fecha (Fecha, Nombre, Hora, Tipo, Modal., Reg.)</option>
                                 <option value="tipo_estudiante">Tipo Estudiante (Tipo, Fecha, Hora, Modal., Nombre, Reg.)</option>
                                 <option value="modalidad">Modalidad (Modal., Tipo, Fecha, Hora, Nombre, Reg.)</option>
                                 <option value="tipo_registro">Tipo Registro (Reg., Fecha, Hora, Tipo, Modal., Nombre)</option>
